# player

./: .all-contributorsrc  .autorc  .bazelignore  .bazelrc  .codecov.yml  .editorconfig  .eslintrc.js  .gitignore  .lintstagedrc.cjs  .lintstagedrc.js  .npmrc  .prettierrc  .swiftformat  .swiftlint.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_GUIDE.md  Gemfile  HANDOVER-android-action-row.md  JUSTFILE  LICENSE  MODULE.bazel  Mintfile  Package.resolved  Package.swift  PlayerUI.podspec  README.md  TROUBLESHOOTING.md  UIView+Extensions.swift  VERSION  WORKSPACE  WORKSPACE.bzlmod  babel.config.js  build_constants.bzl  cmake.bzl  codecov.yaml  eslint.config.mts  generated.bzl  (+21 more)
apple/: BUILD.bazel
apple/core/: BUILD.bazel
apple/core/Sources/CorePlugins/: PartialMatchFingerprintPlugin.swift
apple/core/Sources/Types/: Beacon.swift  JSLogger.swift
apple/core/Sources/utilities/: ErrorUtilites.swift  JSValue+Extensions.swift
apple/core/Tests/: HeadlessPlayerTests.swift
apple/core/Tests/CorePlugins/: PartialMatchFingerprintPluginTests.swift
apple/demo/: BUILD.bazel
apple/demo/Sources/: MockFlows.swift
apple/internal-test-utils/: BUILD.bazel
apple/ios/: BUILD.bazel
apple/ios/Sources/: SwiftUIPlayer.swift
apple/ios/Sources/ManagedPlayer/: ManagedPlayer.swift  ScrollPlugin.swift  ScrollToProxy.swift
apple/ios/Sources/extensions/: SwiftUI+Decoder+Extensions.swift
apple/ios/Sources/types/: WrappedFunction.swift
apple/ios/Tests/: SwiftUIRegistryTests.swift
apple/ios/Tests/ManagedPlayer/: ManagedPlayerViewModelTests.swift
apple/ios/Tests/extensions/: DecoderExtensionsTests.swift
apple/logger/: BUILD.bazel
apple/logger/Sources/: TapableLogger.swift
apple/logger/Tests/: LogLevelTests.swift
apple/test-utils/: BUILD.bazel
apple/test-utils-core/: BUILD.bazel
apple/test-utils-core/Sources/ui-test/: AssetCollection.swift
apple/test-utils-core/Sources/utilities/: AssetTestHelper.swift
apple/test-utils/Sources/ui-test/: AssetUITestCase.swift
apple/test-utils/Sources/unit-test/: SwiftUIAssetUnitTestCase.swift
apple/test-utils/ViewInspector/ui-test/: AssetFlowViewTests.swift
apple/test-utils/ViewInspector/unit-test/: SwiftUIAssetUnitTestCaseTests.swift
ios/: BUILD.bazel  README.md
ios/Player.xcodeproj/: project.pbxproj
ios/Player.xcodeproj/rules_xcodeproj/: external.xcfilelist  generated.xcfilelist
ios/Player.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh  swiftc  xctest.exclude.rsynclist
ios/Player.xcodeproj/xcshareddata/xcschemes/: PlayerUI.xcscheme  PlayerUIBaseBeaconPlugin.xcscheme  PlayerUIBaseBeaconPluginTests (Library).xcscheme  PlayerUIBaseBeaconPluginTests (Unit Tests).xcscheme  PlayerUIBeaconPlugin.xcscheme  PlayerUIBeaconPluginViewInspectorTests (Library).xcscheme  PlayerUIBeaconPluginViewInspectorTests (UI Tests).xcscheme  PlayerUIDemo.xcscheme  PlayerUIInternalTestUtilities.xcscheme  PlayerUILogger.xcscheme  PlayerUILoggerTests (Library).xcscheme  PlayerUILoggerTests (Unit Tests).xcscheme  PlayerUIReferenceAssets.xcscheme  PlayerUISwiftUI.xcscheme  PlayerUISwiftUIPendingTransactionPlugin.xcscheme  PlayerUISwiftUIPendingTransactionPluginViewInspectorTests (Library).xcscheme  PlayerUISwiftUIPendingTransactionPluginViewInspectorTests (UI Tests).xcscheme  PlayerUISwiftUITests (Library).xcscheme  PlayerUISwiftUITests (Unit Tests).xcscheme  PlayerUISwiftUIViewInspectorTests (Library).xcscheme  PlayerUISwiftUIViewInspectorTests (UI Tests).xcscheme  PlayerUITests (Library).xcscheme  PlayerUITests (Unit Tests).xcscheme  SwiftHooks.xcscheme  ViewInspector.xcscheme
ios/core/: BUILD.bazel
ios/core/Resources/: player.prod.js
ios/core/Sources/: PluginManager.swift
ios/core/Sources/CorePlugins/: JSBasePlugin.swift  NativePlugin.swift  PartialMatchFingerprintPlugin.swift
ios/core/Sources/Player/: HeadlessPlayer.swift  StartOptions.swift
ios/core/Sources/Types/: Beacon.swift  JSLogger.swift
ios/core/Sources/utilities/: DebugValue.swift  ErrorUtilites.swift  GenericInterfaces.swift  JSUtilities.swift  JSValue+Extensions.swift  ResourceUtilities.swift
ios/core/Tests/: ErrorControllerTests.swift  FlowStateTests.swift  HeadlessPlayerTests.swift  JSContextRetainCycleTests.swift  NavigationFlowStateTypeTests.swift
ios/core/Tests/CorePlugins/: PartialMatchFingerprintPluginTests.swift
ios/core/Tests/Types/: HooksTests.swift
ios/core/Tests/utilities/: ErrorUtilitiesTests.swift  JSLoggerTests.swift  JSUtilitiesTests.swift  (+2 more)
ios/demo/: BUILD.bazel
ios/demo/Resources/: Info.plist
ios/demo/Sources/: A2UIDemoView.swift  A2UIMockFlows.swift  App.swift  FlowManagerView.swift  MockFlows.swift  PluginsAndPlayerCollection.swift  SegmentControlView.swift  String+Extensions.swift
ios/internal-test-utils/: BUILD.bazel
ios/internal-test-utils/Sources/: FlowData.swift  HeadlessPlayerImpl.swift  TestDecoder.swift
ios/logger/: BUILD.bazel
ios/logger/Sources/: LogLevel.swift  TapableLogger.swift
ios/logger/Tests/: LogLevelTests.swift  TapableLoggerTests.swift
ios/swiftui/: BUILD.bazel
ios/swiftui/Sources/: PlayerViewTransition.swift  SwiftUIPlayer.swift  SwiftUIRegistry.swift
ios/swiftui/Tests/: SwiftUIRegistryTests.swift
ios/swiftui/ViewInspector/: SwiftUIPlayerTests.swift
ios/test-utils/: BUILD.bazel
ios/test-utils-core/: BUILD.bazel
ios/test-utils-core/Resources/: make-flow.prod.js
ios/test-utils-core/Tests/: AssetTestHelperTests.swift
newios/: BUILD.bazel
newios/Player.xcodeproj/: project.pbxproj
newios/Player.xcodeproj/rules_xcodeproj/: external.xcfilelist  generated.xcfilelist
plugins/a2ui/swiftui/: BUILD.bazel
plugins/async-node/apple/: BUILD.bazel
plugins/async-node/ios/: BUILD.bazel
plugins/beacon/ios/: BUILD.bazel
plugins/beacon/swiftui/: BUILD.bazel
plugins/check-path/ios/: BUILD.bazel
plugins/check-path/swiftui/: BUILD.bazel
plugins/common-expressions/ios/: BUILD.bazel
plugins/common-types/ios/: BUILD.bazel
plugins/computed-properties/ios/: BUILD.bazel
plugins/console-logger/ios/: BUILD.bazel
plugins/expression/ios/: BUILD.bazel
(+2942 files in other folders)
